[package]
name = "village"
version = "0.0.1"
authors = ["marcsh <marcsh@gmail.com>"]
edition = "2021"
rust-version = "1.62.1"
resolver = "2"

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
strip = "symbols"

[dependencies]
bevy =        { path = "libs/bevy" }
bevy_sprite = { path = "libs/bevy/crates/bevy_sprite" }
bevy_egui =   { path = "libs/bevy_egui" }
crdts =       { path = "libs/rust-crdt" }

json = "0.12.4"
rand = "0.8.5"
thread_local = "1.1"
futures-lite = "1.11.3"
